# visual_topological_slam

./: .gitignore  README.md  requirements.txt
amr_devcontainer/.devcontainer/: .env  Dockerfile  devcontainer.json  requirements.txt
amr_devcontainer/vts_ws/launch/: project.launch.py
amr_devcontainer/vts_ws/src/py_pubsub/: package.xml  setup.py
amr_devcontainer/vts_ws/src/vts_camera/: package.xml  setup.cfg  setup.py
amr_devcontainer/vts_ws/src/vts_camera/vts_camera/: camera.py  camera_node.py
amr_devcontainer/vts_ws/src/vts_commands/: package.xml  setup.cfg  setup.py
amr_devcontainer/vts_ws/src/vts_commands/vts_commands/: commands.py  commands_node.py
amr_devcontainer/vts_ws/src/vts_graph_building/: package.xml  setup.cfg  setup.py
amr_devcontainer/vts_ws/src/vts_graph_building/vts_graph_building/: graph_builder.py  graph_builder_node.py  graph_builder_threshold.py  new.py  node.py
amr_devcontainer/vts_ws/src/vts_map_alignment/: package.xml  setup.cfg  setup.py
amr_devcontainer/vts_ws/src/vts_map_alignment/vts_map_alignment/: graph_class.py  (+2 more)
amr_devcontainer/vts_ws/src/vts_msgs/: CMakeLists.txt  package.xml
amr_devcontainer/vts_ws/src/vts_msgs/msg/: CommandMessage.msg  CustomOdometry.msg  FullGraph.msg  GraphNode.msg  ImageTensor.msg
amr_devcontainer/vts_ws/src/vts_odom/: package.xml  setup.cfg  setup.py
project/runs/model_1/: events.out.tfevents.1738719030.AA25LABIAP09.8808.0  events.out.tfevents.1738769682.AA25LABIAP09.14992.0
project/src/: evaluate.py  models.py  train.py  utils.py
project/utils/: datasets.py  preprocess.py
(+3 files in other folders)
